WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162023
URLParser: Check for invalid characters in the host
https://bugs.webkit.org/show_bug.cgi?id=162023
Summary
URLParser: Check for invalid characters in the host
Alex Christensen
Reported
2016-09-15 11:03:00 PDT
URLParser: Check for invalid characters in the host
Attachments
Patch
(2.76 KB, patch)
2016-09-15 11:04 PDT
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2016-09-15 11:04:33 PDT
Created
attachment 288974
[details]
Patch
Alex Christensen
Comment 2
2016-09-15 11:23:22 PDT
Comment on
attachment 288974
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=288974&action=review
> Source/WebCore/platform/URLParser.cpp:1579 > + if (isInvalidDomainCharacter(*iterator)) > + return false; > if (*iterator == ':') > break;
The check for colon should come first. The first colon means we are starting to parse the port. This is covered by API tests.
Alex Christensen
Comment 3
2016-09-15 11:23:30 PDT
http://trac.webkit.org/changeset/205988
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug