URLParser: Check for invalid characters in the host https://bugs.webkit.org/show_bug.cgi?id=162023

Reviewed by Tim Horton.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::failure):
(WebCore::URLParser::parseHost):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205988 268f45cc-cd09-0410-ab3c-d52691b4dbfc